<resources>
    <string name="app_name">My Fridge App</string>
    <string name="country">Enter your Country</string>
    <string name="action_bar_button">MyFridge Locations</string>
    <string name="options">options</string>
    <string name="settings">settings</string>
    <string name="help">help</string>
    <string name="look">A Look In My Fridge</string>
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorite Recipes</string>
    <string name="grocerylist">Grocery List</string>
    <string name="selected_item">My Fridge Contents:</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="ingredient_item">\u2022  %1$s</string>
    <string name="calories">(%1$s calories)</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="recipe_count_msg">Recipe Count: %1$s</string>
    <string name="share">share</string>
    <string name="foodType">Food Name</string>
    <string name="numQuantity">Number of Items</string>
    <string name="foodCategory">Food Category (dairy, meat, etc. )</string>
    <string name="unitOfMeasure">Unit of Measurement (Cups, oz, etc. )</string>
    <string name="SearchIngredients">Search for ingredients</string>
    <string name="write_json">Write JSON</string>
    <string name="parse_json">Parse JSON</string>
    <string name="add_a_new_food_item">Add A New Food Item</string>
    <string name="edit_items_in_fridge">Edit Items in Fridge</string>
    <string name="favorite_item_icon">Favorite Item Icon</string>
    <string name="calendars">Calendars</string>

    <string-array name="MenuContents">
        <item>Beef Stroganoff</item>
        <item>Pad Thai</item>
        <item>Quinoa Salad</item>
        <item>Moms Chili</item>
    </string-array>

</resources>
