<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3CDB8"
    tools:context=".MainActivity">


    <!--    <ImageView-->
    <!--        android:id="@+id/imageView"-->
    <!--        android:layout_width="80dp"-->
    <!--        android:layout_height="80dp"-->
    <!--        android:layout_marginStart="185dp"-->
    <!--        android:layout_marginLeft="185dp"-->
    <!--        android:layout_marginEnd="206dp"-->
    <!--        android:layout_marginRight="206dp"-->
    <!--        android:layout_marginBottom="632dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:srcCompat="@drawable/androidimagebutton1" />-->

    <!--    <ImageButton-->
    <!--        android:id="@+id/image_button"-->
    <!--        android:layout_width="80dp"-->
    <!--        android:layout_height="80dp"-->
    <!--        android:layout_marginStart="331dp"-->
    <!--        android:layout_marginLeft="331dp"-->
    <!--        android:layout_marginTop="3dp"-->
    <!--        android:layout_marginBottom="648dp"-->
    <!--        android:foregroundGravity="right"-->
    <!--        android:src="@drawable/androidimagebutton1"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="44dp"
        android:layout_height="37dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="296dp"
        android:addStatesFromChildren="false"
        android:animateLayoutChanges="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="308dp"
        android:layout_height="62dp"
        android:layout_marginStart="191dp"
        android:layout_marginLeft="191dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/look"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="308dp"
        android:layout_height="62dp"
        android:layout_marginStart="197dp"
        android:layout_marginLeft="197dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/recipes"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="308dp"
        android:layout_height="62dp"
        android:layout_marginStart="197dp"
        android:layout_marginLeft="197dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <Button
        android:id="@+id/button4"
        android:layout_width="308dp"
        android:layout_height="62dp"
        android:layout_marginStart="197dp"
        android:layout_marginLeft="197dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/grocerylist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

